# web-scraper

./: Cargo.toml
src/: lib.rs  main.rs
src/build_csv/: mod.rs
src/parse_product/: mod.rs
src/scrape/: mod.rs
