[package]
name = "web-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
reqwest = { version="0.11.20", features = ["json"]}
scraper = "0.17.1"
serde = "1.0.188"
tokio = { version="1.32.0", features = ["full"] }
